<resources>
    <string name="app_name">Crash Guide</string>

    <string name="action_refresh">Refresh</string>

    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_movies_list_unavailable">Movies Unavailable.</string>
    <string name="failure_movie_non_existent">Movie Not Existent.</string>
    <string name="start">EMPEZAR</string>
    <string name="did_you_have_a_crash">¿Tuviste un accidente?</string>
    <string name="is_any_injured">¿Hubo algún herido?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="ambulance_phonenumber">131</string>
    <string name="police_phonenumber">133</string>
    <string name="firedepartment_phonenumber">132</string>
    <string name="call_an_ambulance">Llamar a SAMU</string>
    <string name="call_police">Llamar a Carabineros</string>
    <string name="call_fire_department">Llamar a Bomberos</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="where_did_the_crash_ocurre">¿En dónde ocurrieron los hechos?</string>
    <string name="next">CONTINUAR</string>
    <string name="modify">MODIFICAR</string>
    <string name="thirdpartyinformation">Third Patry Information</string>
    <string name="add_thirdparty_information">Identifica a las personas involucradas</string>
    <string name="name">Nombre</string>
    <string name="names">Nombres</string>
    <string name="surnames">Apellidos</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="vehicle_involved">Identifica el vehiculo involucrado</string>
    <string name="year">Año</string>
    <string name="color">Color</string>
    <string name="add_your_info">Agrega tus datos personales</string>
    <string name="add_your_car_info">Agrega los datos de tu vehiculo</string>
    <string name="textFABMyQR">Mostrar mi QR</string>
    <string name="textFABQR">Escanear QR</string>
    <string name="textFABWrite">Escribir datos</string>
    <string name="error">Por favor ingrese este dato</string>
    <string name="this_qr">Usa este QR para enviar tu información</string>
    <string name="We_are_sorry_you_had_an_accident">Lamentamos que hayas tenido un accidente.</string>
    <string name="enter_your_personal_information">Primero, ingresa tus datos personales en el boton de registro, arriba a la derecha.</string>
    <string name="if_you_dont_do_it_now">(sino lo haces ahora lo puedes hacer durante el registro del accidente).</string>
    <string name="add_contacts">Puedes agregar contactos a los cuales les quieres avisar que tuviste un accidente automaticamente.</string>
    <string name="the_last_step">Por ultimo, debes ingregar la ubicación del accidente, indicar si hubo heridos y los datos de los conductores involucrados.</string>
    <string name="if_qr">Si los otros involucrados poseen Crash Guide puedes scanear el codigo QR para obtener sus datos.</string>
    <string name="send_sms">¿Deseas enviarle a tus contactos de emergencia un sms para indicarles que haz tenido un accidente?</string>

    <string name="contact_text">A continuación se muestran los contactos a los cuales se les enviará un SMS en caso de que ocurra un accidente.</string>
    <string name="sms_text">Acabo de tener un accidente</string>
    <string name="text_fab_contact">Seleccionar contacto</string>

    <string-array name="has_protection">
        <item>¿Posee seguro automotriz?</item>
        <item>Si</item>
        <item>No</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_third_party_photo">ThirdPartyPhotoActivity</string>
</resources>
