<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.onboarding.PageThreeFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView1"
        android:src="@mipmap/home_listo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/the_last_step" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginHorizontal="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/if_qr" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:text="@string/start"
        android:textColor="@color/white" />

</RelativeLayout>