<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scrim">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@mipmap/shadow"
        android:orientation="vertical">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/listaTerceros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9">


        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/createPDF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button"
            android:layout_below="@+id/listaTerceros"
            android:text="@string/next"
            android:textColor="@color/white"/>


    </LinearLayout>



    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="90dp"
        fab:fab_addButtonColorNormal="?attr/colorPrimary"
        fab:fab_addButtonSize="normal"
        fab:fab_labelStyle="@style/Etiquetas"
        fab:fab_labelsPosition="left">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="?attr/colorAccent"
            fab:fab_icon="@android:drawable/ic_menu_camera"
            fab:fab_size="mini"
            fab:fab_title="@string/textFABQR" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="?attr/colorAccent"
            fab:fab_icon="@android:drawable/ic_menu_edit"
            fab:fab_size="mini"
            fab:fab_title="@string/textFABWrite" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
