<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scrim">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@mipmap/shadow"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Es importante que te comuniques con las asistencias necesarias"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/call_an_ambulance"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/ambulanceLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="abulance"
                app:srcCompat="@mipmap/ambulance" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/call_police"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/policeLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="police"
                app:srcCompat="@mipmap/policedepartment" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/call_fire_department"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/firemanLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:contentDescription="fireman"
                app:srcCompat="@mipmap/firedepartment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/showMapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:text="@string/next"
                android:textColor="@color/white"  />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
